refactor: Use Fish Speech reference_id system for TTS generation
- Add scripts/setup_fish_references.py to create reference voice directories
- Update generate_tts_10min.py to use --reference_id instead of --reference_audio
- Fish Speech now pre-loads and caches voice embeddings from references/
- Update GitHub Actions workflow to setup references before TTS generation
- Update documentation to explain reference_id system and why it's better
- Reference structure: fish-speech/references/{speaker}/sample.{audio|lab}

This approach is more efficient as Fish Speech:
1. Encodes voice samples once when loading reference_id
2. Caches encoded embeddings in memory for faster generation
3. Avoids re-encoding audio for every API call

--- a/.github/workflows/generate-tts-10min.yml
+++ b/.github/workflows/generate-tts-10min.yml
@@ -56,10 +56,13 @@ jobs:
           echo "Models already cached"
         fi
     
-    - name: Verify voice embeddings
+    - name: Setup Fish Speech references
       run: |
-        echo "✅ Voice Models:"
-        ls -lh models/*.npy
+        echo "📁 Setting up Fish Speech reference voices..."
+        python scripts/setup_fish_references.py
+        echo ""
+        echo "✅ References created:"
+        ls -la fish-speech/references/
     
     - name: Prepare TTS generation
       run: |
