--- a/.github/workflows/generate-tts-10min.yml
+++ b/.github/workflows/generate-tts-10min.yml
@@ -38,6 +38,11 @@ jobs:
           fish-speech/checkpoints
         key: ${{ runner.os }}-fish-speech-v3-${{ hashFiles('fish-speech/pyproject.toml') }}
     
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y portaudio19-dev python3-pyaudio ffmpeg
+    
     - name: Install Fish Speech
       run: |
         cd fish-speech
