fix: Install compatible torch versions before Fish Speech
Fish Speech requires torch>=2.5.1,<2.9.0
Install torch/torchaudio with version constraints first to avoid incompatibility

--- a/.github/workflows/generate-tts-10min.yml
+++ b/.github/workflows/generate-tts-10min.yml
@@ -46,8 +46,10 @@ jobs:
     - name: Install Fish Speech
       run: |
         cd fish-speech
+        # Install compatible torch versions first
+        pip install 'torch>=2.5.1,<2.9.0' 'torchaudio>=2.5.1,<2.9.0' --index-url https://download.pytorch.org/whl/cpu
+        # Then install fish-speech
         pip install -e .
-        pip install torch torchaudio --index-url https://download.pytorch.org/whl/cpu
     
     - name: Download Fish Speech models
       env:
