fix: Wait for API server health endpoint instead of fixed sleep
Replace 30s sleep with health check polling.
Polls /v1/health endpoint up to 60 times (1s interval).
Server needs time for warmup generation before accepting requests.

--- a/.github/workflows/generate-tts-10min.yml
+++ b/.github/workflows/generate-tts-10min.yml
@@ -82,17 +82,21 @@ jobs:
         API_PID=$!
         echo "API_PID=$API_PID" >> $GITHUB_ENV
         echo "API server PID: $API_PID"
-        echo "Waiting for API server to start..."
-        sleep 30
+        echo "Waiting for API server to be ready..."
         
-        # Check if server is running
-        if ps -p $API_PID > /dev/null; then
-          echo "✅ API server is running"
-        else
-          echo "❌ API server failed to start"
-          cat ../api_server.log
-          exit 1
-        fi
+        # Wait for server to be ready (check health endpoint)
+        for i in {1..60}; do
+          if curl -s http://127.0.0.1:8080/v1/health > /dev/null 2>&1; then
+            echo "✅ API server is ready after ${i} seconds"
+            break
+          fi
+          if [ $i -eq 60 ]; then
+            echo "❌ API server failed to become ready"
+            cat ../api_server.log
+            exit 1
+          fi
+          sleep 1
+        done
     
     - name: Generate TTS audio
       run: |
