--- a/.github/workflows/generate-tts-10min.yml
+++ b/.github/workflows/generate-tts-10min.yml
@@ -85,13 +85,14 @@ jobs:
         echo "Waiting for API server to be ready..."
         
         # Wait for server to be ready (check health endpoint)
-        for i in {1..60}; do
+        # Warmup can take 60+ seconds on CPU
+        for i in {1..120}; do
           if curl -s http://127.0.0.1:8080/v1/health > /dev/null 2>&1; then
             echo "✅ API server is ready after ${i} seconds"
             break
           fi
-          if [ $i -eq 60 ]; then
-            echo "❌ API server failed to become ready"
+          if [ $i -eq 120 ]; then
+            echo "❌ API server failed to become ready after 120 seconds"
             cat ../api_server.log
             exit 1
           fi
