--- a/.github/workflows/generate-tts-10min.yml
+++ b/.github/workflows/generate-tts-10min.yml
@@ -101,12 +101,12 @@ jobs:
         fi
     
     - name: Generate TTS audio
-      timeout-minutes: 10
+      timeout-minutes: 30
       run: |
         cd output/tts/10min
         chmod +x generate_with_fish_speech.sh
         
-        # Run the generation script (first segment only for testing)
+        # Run the generation script (first segment only - takes ~17min on CPU)
         head -20 generate_with_fish_speech.sh | bash
         
         echo "✅ TTS generation complete"
